Changed a lot of stuff around to make the experience better.

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
         "nsis": {
             "oneClick": true,
             "installerIcon": "./src/icon.ico",
-            "uninstallerIcon": "./src/icon.ico"
+            "uninstallerIcon": "./src/icon.ico",
+            "deleteAppDataOnUninstall": true
         }
     },
     "license": "MIT",
