--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "hac-programmer",
-    "productName": "hac-programmer",
-    "version": "1.0.0",
+    "productName": "HAC Programmer",
+    "version": "1.0.1",
     "description": "HAC Programmer",
     "repository": "https://github.com/Joery-M/HAC-Programmer",
     "main": "src/index.js",
